6862295: JDWP threadid changes during debugging session (leading to ingored breakpoints)

Correctly count full GC operations for framework collectors. Add ForceFullGCJVMTIEpilogues as a future work around if needed.

Reviewed-by: jcoomes, alanb, ysr